https://bugs.webkit.org/show_bug.cgi?id=87418 WebBackForwardList should separate "has no current index" from the integer value of the current index

This patch also renames "m_current" to "m_currentIndex" for clarity and symmetry with
other variable names that reference "index",

It also removes the m_closed and m_enabled flags which were never actually used.

Reviewed by Darin Adler.

* UIProcess/WebBackForwardList.cpp:
(WebKit::WebBackForwardList::WebBackForwardList):
(WebKit::WebBackForwardList::addItem):
(WebKit::WebBackForwardList::goToItem):
(WebKit::WebBackForwardList::currentItem):
(WebKit::WebBackForwardList::backItem):
(WebKit::WebBackForwardList::forwardItem):
(WebKit::WebBackForwardList::itemAtIndex):
(WebKit::WebBackForwardList::backListCount):
(WebKit::WebBackForwardList::forwardListCount):
(WebKit::WebBackForwardList::backListAsImmutableArrayWithLimit):
(WebKit::WebBackForwardList::forwardListAsImmutableArrayWithLimit):
(WebKit::WebBackForwardList::clear):

* UIProcess/WebBackForwardList.h:
(WebKit::WebBackForwardList::currentIndex):
(WebBackForwardList):

* UIProcess/cf/WebBackForwardListCF.cpp:
(WebKit::WebBackForwardList::createCFDictionaryRepresentation):
(WebKit::WebBackForwardList::restoreFromCFDictionaryRepresentation):

Canonical link: https://commits.webkit.org/105312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118560 268f45cc-cd09-0410-ab3c-d52691b4dbfc